logs/nappy.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/nappy'...
Listing './lib/python3.5/site-packages/nappy/config'...
Listing './lib/python3.5/site-packages/nappy/contrib'...
Listing './lib/python3.5/site-packages/nappy/contrib/aircraft'...
Compiling './lib/python3.5/site-packages/nappy/contrib/aircraft/aircraftData.py'...
***   File "./lib/python3.5/site-packages/nappy/contrib/aircraft/aircraftData.py", line 182
    print "Setting missing value for '%s' as: %s" % (var.id, fv)
                                                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/nappy/contrib/aircraft/old_na_to_nc_with_aircraft.py'...
***   File "./lib/python3.5/site-packages/nappy/contrib/aircraft/old_na_to_nc_with_aircraft.py", line 75
    print msg
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/nappy/contrib/aircraft/scanFAAM.py'...
***   File "./lib/python3.5/site-packages/nappy/contrib/aircraft/scanFAAM.py", line 66
    print "Start/End index: %s %s:%s" % (id, start, end)
                                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/nappy/na_error'...
Listing './lib/python3.5/site-packages/nappy/na_file'...
Compiling './lib/python3.5/site-packages/nappy/na_file/na_file.py'...
***   File "./lib/python3.5/site-packages/nappy/na_file/na_file.py", line 166
    raise Exception("Empty line found in data section at line: " + `count`)
                                                                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/nappy/na_file/na_file_1020.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (na_file_1020.py, line 68)
Compiling './lib/python3.5/site-packages/nappy/na_file/na_file_2110.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (na_file_2110.py, line 80)
Compiling './lib/python3.5/site-packages/nappy/na_file/na_file_2160.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (na_file_2160.py, line 100)
Listing './lib/python3.5/site-packages/nappy/nc_interface'...
Compiling './lib/python3.5/site-packages/nappy/nc_interface/cdms_to_na.py'...
***   File "./lib/python3.5/site-packages/nappy/nc_interface/cdms_to_na.py", line 161
    raise Exception("Can only handle converting less than " + `var_limit` + " variables in any batch.")
                                                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/nappy/nc_interface/na_content_collector.py'...
***   File "./lib/python3.5/site-packages/nappy/nc_interface/na_content_collector.py", line 338
    if type(miss) not in (type(1.2), type(1), type(1L)):
                                                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/nappy/nc_interface/na_to_cdms.py'...
***   File "./lib/python3.5/site-packages/nappy/nc_interface/na_to_cdms.py", line 93
    raise Exception("Cannot convert NASA Ames File Format Index (FFI) " + `self.na_file_obj.FFI` + " to CDMS objects. No mapping implemented yet.")
                                                                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/nappy/nc_interface/quick_tests_na_to_nc.py'...
***   File "./lib/python3.5/site-packages/nappy/nc_interface/quick_tests_na_to_nc.py", line 13
    print "Reading:", infile
                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/nappy/nc_interface/quick_tests_nc_to_na.py'...
***   File "./lib/python3.5/site-packages/nappy/nc_interface/quick_tests_nc_to_na.py", line 14
    print "Reading:", infile
                   ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/nappy/script'...
Compiling './lib/python3.5/site-packages/nappy/script/na2nc.py'...
***   File "./lib/python3.5/site-packages/nappy/script/na2nc.py", line 44
    print __doc__
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/nappy/script/nc2na.py'...
***   File "./lib/python3.5/site-packages/nappy/script/nc2na.py", line 52
    print __doc__
                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/nappy/utils'...
Compiling './lib/python3.5/site-packages/nappy/utils/common_utils.py'...
***   File "./lib/python3.5/site-packages/nappy/utils/common_utils.py", line 28
    mod = "nappy.na_file.na_file_" + `ffi`
                                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/nappy/utils/compare.py'...
***   File "./lib/python3.5/site-packages/nappy/utils/compare.py", line 33
    print __doc__
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/nappy/utils/compare_na.py'...
***   File "./lib/python3.5/site-packages/nappy/utils/compare_na.py", line 52
    print __doc__
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/nappy/utils/parse_config.py'...
***   File "./lib/python3.5/site-packages/nappy/utils/parse_config.py", line 128
    print getConfigDict()
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/nappy/utils/right_strip.py'...
***   File "./lib/python3.5/site-packages/nappy/utils/right_strip.py", line 52
    print "INPUT:  %s" % line
                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/nappy/utils/text_parser.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (text_parser.py, line 76)
Listing './lib/python3.5/site-packages/nappy-1.1.4.post0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
